src/test/invalid/semanticErr/expressions/exprTypeErr.wacc
#Incompatible type at 15+6||19 (expected: INT, actual: BOOL)
# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int b = 15 + 6 || 19
end
